Changelog
=========

7.3-dev - (unreleased)
----------------------

7.2 - (2013-03-18)
------------------
* Bug fix: Fixed loss of data settings customizations if one would have changed
  any other metadata than 'spreadsheet (Copy and paste a data table from a
  file/webpage)'within Edit tab
  [voineali refs #14172]

7.1 - (2013-03-15)
------------------
* Change: make chart selection for relations sortable
  [tiberich #13993]
* Upgrade step: go to /www/@@migrate_daviz_relations to migrate to sortable
  relations for daviz/ims integration
  [tiberich #13993]
* Feature: added information for contributors
  [ciobabog refs #13892]
* Change: Added description to controlpanel fields
  [szabozo0]
* Bug fix: fixed small bug in code that broke get_daviz when daviz was deleted
  [tiberich #13993]

7.0 - (2013-02-25)
------------------
* Change: removed redundant and unnecessary data_source provenance code,
  which is already better implemented with @@data.info
  [demarant refs #9561 and #9571]

6.4 - (2013-02-04)
------------------
* Feature: Support data annotations
  [voineali refs #9558]

6.3 - (2013-01-15)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" run upgrades (if available)
  for the following packages in the same order as bellow:
  - EEA Versions (eea.forms)
  - EEA Forms (eea.forms)
  - EEA Sparql (eea.sparql)
  - EEA Visualization API (eea.app.visualisation);
  - EEA Google Charts (eea.googlecharts);
  - EEA Exhibit (eea.exhibit);
  - EEA Daviz (eea.daviz)
* Feature: Added italian translations
  [simahawk]

6.2 - (2013-01-10)
------------------
* Upgrade Step: if you have eea.relations installed in your system,
  in portal_setup, Import tab, select the profile "EEA Daviz: eea.relations
  integration" and import the Javascripts Registry step.
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Added WYSIWYG table editor (SlickGrid) when one directly copy&paste