@@ -3,6 +3,10 @@ Changelog
 
 7.3-dev - (unreleased)
 ----------------------
+* Bug fix: make DavizVisualization inherit from Products.ATContentTypes
+  instead of plone.app.folder to avoid problem with LinguaPlone generated
+  mutators
+  [tiberich #14050]
 
 7.2 - (2013-03-18)
 ------------------
